update default avatar

--- a/src/app/pages/options/discussion-options/discussion-options.component.html
+++ b/src/app/pages/options/discussion-options/discussion-options.component.html
@@ -76,13 +76,14 @@
       <div nz-col>
         <div class="check-item">
           <nz-select style="width: 200px" formControlName="avatarDefault" nzPlaceHolder="请选择默认头像">
-            <nz-option nzLabel="神秘人士" nzValue="mystery"></nz-option>
-            <nz-option nzLabel="空白" nzValue="blank"></nz-option>
-            <nz-option nzLabel="Gravatar标志" nzValue="gravatar_default"></nz-option>
+            <nz-option nzLabel="站点LOGO" nzValue="logo"></nz-option>
+            <nz-option nzLabel="神秘人士" nzValue="mp"></nz-option>
             <nz-option nzLabel="抽象图形（自动生成）" nzValue="identicon"></nz-option>
-            <nz-option nzLabel="Wavatar（自动生成）" nzValue="wavatar"></nz-option>
             <nz-option nzLabel="小怪物（自动生成）" nzValue="monsterid"></nz-option>
+            <nz-option nzLabel="Wavatar（自动生成）" nzValue="wavatar"></nz-option>
             <nz-option nzLabel="复古（自动生成）" nzValue="retro"></nz-option>
+            <nz-option nzLabel="机器人（自动生成）" nzValue="robohash"></nz-option>
+            <nz-option nzLabel="空白" nzValue="blank"></nz-option>
           </nz-select>
         </div>
       </div>
